fixed whitespace and hidden objects

--- a/structure/style.css
+++ b/structure/style.css
@@ -12,8 +12,8 @@
 }
 body {
     font-family: 'Quicksand';
-    height: 100%;
     width: 100%;
+    height: 100%;
 }
 .pattern {
     width: 100%;
@@ -26,12 +26,12 @@ body {
 
 .layer {
     background-color: var(--bgColorDarkn);
-    top: 12%;
+    top: 8%;
     left: 0;
     width: 100%;
     z-index: 99;
     box-shadow: 0px -6px 5px rgba(0, 0, 0, 0.70);
-    border-radius: 150px 150px 0px 0px;
+    border-radius: 60px 60px 0px 0px;
     position: absolute;
 }
 
@@ -196,7 +196,8 @@ input {
     box-shadow: 0px -6px 5px rgba(0, 0, 0, 0.70);
     border-radius: 60px 60px 0px 0px;
     position: absolute;
-    height: 90%;
+    height: 100%;
+    
 }
 h1{
     font-weight: 600;
@@ -563,10 +564,10 @@ footer{
     width: 75%;
     text-align: center;
     height: 50px;
-    margin-left: 12%;
-    margin-right: 12%;
-    margin-top: 5vh;
-    margin-bottom: 5vh;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 3rem;
     border-radius: 15px;
 }
 /* group match page*/
@@ -603,6 +604,7 @@ margin-right: 0%;
 display: flex;
   justify-content: center;
   align-items: center;
+  margin-bottom: 8rem;
 }
 .delete-addFlex{
     margin-left: auto;
